- Made mediamosa_app depended on mediamosa module.
- Made mediamosa_acl depended on mediamosa_metadata_dc and _qdc modules.
- Added message about running background test (if any), size of test queue on 
  the automated simpletest testing page (developers only).
- Fixed problem with download test where PHP memory ran out.
- Fixed download problem when file contains spaces.

MediaMosa 3.0 (build 1698)
--------------------------
- oAuth development (See ticket #10).
- Owner check for /asset/$asset_id/joblist (See ticket #356).
- Watermarking stills (See ticket #82).
- Users can now be in more than one (quota) group (See ticket #223).
- oEmbed provider functionality (See ticket #413).
  "HTTP 501 Not implemented" error was introduced. Code was reorganized.
- Added support for OpenApi. OpenApi has its own core module and needs to be
  turned on to be used. (See ticket #428).
- oAuth can now be used to indentify your client application (See tickets #462,
  #463, #464).
- Retranscode option in admin (See ticket #467).
- Granted flag not correct with non-original master slaved mediafiles fix. 
  (See ticket #432).  
- Play request with "tag" development (See ticket #216).
- Parameter name "acl_group_id/aut_group_id" added in /asset/{asset_id}/play, 
  and "group_id" is marked as depricated (See ticket #238).
- Variable for custom control bar height in objectcode (See ticket #326).
- Asset, assets and asset/$asset_id GET REST call show the collection data
  in better format (See ticket #332).
- REST call preview_profile_id is now depricated, use 
  /transcode/profile/default REST call instead (See ticket #337).
- Using is_app_admin to view other client apps jobs is no longer possible (See
  ticket #357).
- Optimized /assets REST call (See ticket #360).
- Added REST call 'app/quota' for retrieving quota information of the client
  app (See ticket #366).
- Server URI is separated to URI and path (See ticket #367).