@@ -110,14 +110,11 @@ function mediamosa_app_dbus_mediamosa_app_authorized() {
   // White list.
 
   // If IP white list is set, then we are 'simulated' authorized.
-  $ip_address_whitelist = variable_get('mediamosa_debug_ip_whitelist', '');
-
-  // Get the IP Address.
-  $a_ip_address_whitelist = explode('|', $ip_address_whitelist);
+  $ip_address_whitelists = explode('|', variable_get('mediamosa_debug_ip_whitelist', ''));
 
   // If our IP address is in the white list, then we are 'authorized', but only
   // if you also set the app_id.
-  if (in_array($_SERVER['REMOTE_ADDR'], $a_ip_address_whitelist) && !empty($_REQUEST['app_id'])) {
+  if (in_array($_SERVER['REMOTE_ADDR'], $ip_address_whitelists) && !empty($_REQUEST['app_id'])) {
     return TRUE;
   }
 
